--- a/index.html
+++ b/index.html
@@ -2,50 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Псевдоэлементы. Переходы.</title>
+
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
   </head>
   <body>
-    <main>
-      <article>
-        <h1>Heading 1</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-          quam quas adipisci laboriosam quidem consequatur reiciendis nam, non
-          enim mollitia minima. Eos provident iste repudiandae molestias sit
-          doloremque numquam! Ullam veniam quidem, obcaecati laborum et deserunt
-          molestiae dignissimos quaerat nam reiciendis id explicabo error minus
-          nemo? Odit reiciendis repellat iusto tempora repudiandae similique
-          tempore hic, in recusandae est! Autem, itaque illo. Ipsa quo
-          consequatur cumque mollitia quibusdam culpa et a dolores, autem, quia
-          expedita! Mollitia aspernatur incidunt eos inventore a ullam excepturi
-          repudiandae qui ut! Harum vitae, optio obcaecati cum illum odio
-          incidunt sint libero fuga nesciunt deleniti alias asperiores.
-        </p>
-        <ul>
-          <li>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, ea?
+
+
+    <header class="page-header">
+      <nav>
+        <ul class="list">
+          <li class="list-item">
+            <a href="#" class="link">LInk 1</a>
           </li>
-          <li>
-            Modi omnis natus, labore ratione aliquid provident. Numquam, harum
-            sapiente?
+          <li class="list-item">
+            <a href="#" class="link">LInk 2</a>
           </li>
-          <li>
-            Voluptatem repellat repellendus quia dignissimos nisi aperiam quas,
-            accusantium culpa?
+          <li class="list-item">
+            <a href="#" class="link">LInk 3</a>
           </li>
-          <li>
-            Nisi provident impedit obcaecati doloremque aut explicabo placeat
-            perspiciatis quia.
-          </li>
-          <li>
-            Eius fugiat vitae sapiente aspernatur repellendus, alias numquam
-            molestias eligendi!
+          <li class="list-item">
+            <a href="#" class="link">LInk 4</a>
           </li>
         </ul>
-      </article>
+      </nav>
+    </header>
+
+
+    <main>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur earum laborum accusantium quos esse, necessitatibus, soluta et dolorem quis quae voluptate ut ipsa. Magnam, perferendis distinctio fugit enim ad repellat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id, rerum dicta. Iure, voluptatem velit animi fugiat delectus atque reprehenderit dolorum neque similique, modi iusto iste asperiores saepe laboriosam quaerat nemo.</p>
+
     </main>
   </body>
 </html>
